--- a/frontend/barwarg-cinpus-ui/package.json
+++ b/frontend/barwarg-cinpus-ui/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "usercrudclient",
+  "name": "barwarg-cinpus-ui",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
-    "build:start": "cd dist && PORT=8080 npx serve",
-    "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot"
+    "build:start": "cd dist && PORT=8081 npx serve",
+    "start": "yarn run make-types && yarn run pack-types && webpack serve --open --mode development",
+    "start:live": "webpack serve --open --mode development --live-reload --hot",
+    "make-types": "rm -rf ./barwarg_cinpus_ui-types && make-federated-types --outputDir ./barwarg_cinpus_ui-types",
+    "pack-types": "rm -rf ./public/barwarg_cinpus_ui-types.tgz && tar -czvf ./public/barwarg_cinpus_ui-dts.tgz ./barwarg_cinpus_ui-types"
   },
   "license": "MIT",
   "author": "Tony",
@@ -16,6 +18,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@touk/federated-types": "^1.1.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "autoprefixer": "^10.1.0",
@@ -28,8 +31,7 @@
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-remote-types-plugin": "^0.2.7"
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "react": "^17.0.2",
